--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,12 +6,12 @@
 
 .main__block {
     min-height: 650px;
-}
-
-.main {
     background: url('../img/leaves_bg.jpg') center center no-repeat;
     background-size: cover;
+    margin: 0 auto;
 }
+
+
 
 .header {
     padding-top: 12px;
@@ -97,12 +97,13 @@
     }
 }
 
+$main-green: #f6b43b;
 .main__burger-text {
     color: #fff;
     float: right;
     margin-top: 128px;
     &-1st {
-        color: #f9b43b;
+        color: $main-green;
         font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
         font-size: 72px;
         font-weight: 400;
@@ -145,5 +146,53 @@
             border: 1px solid #fff;
             border-radius: 50%;
         }
+    }
+}
+
+.second-block {
+    min-height: 650px;
+    background: url('../img/bg_white.png') center center no-repeat;
+    background-size: cover;
+    margin: 0 auto;
+}   
+
+.heading-text {
+    display: inline-block;
+    font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 72px;
+    font-weight: 400;
+    line-height: 85px;  
+    font-weight: 500;
+    text-transform: uppercase; 
+}
+
+.second-block__heading {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.features__list {
+    list-style: none;
+    border: 1px solid red;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.features__item {
+    border: 1px solid lightblue;
+    display: inline-block;
+    width: 300px;
+    vertical-align: middle;
+    margin: 0 20px;
+    &-heading {
+        display: block;
+        font-family: 'Lifehack', sans-serif;
+        font-size: 22px;
+        margin: 15px 0;
+    }
+    &-text {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: rgb(70, 48, 48);
     }
 }
