--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,8 @@
   font-weight: 400;
   line-height: 85px;
   font-weight: 500;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  color: #333537; }
 
 .second-block__heading {
   margin: 0 auto;
@@ -139,22 +140,24 @@
 
 .features__list {
   list-style: none;
-  border: 1px solid red;
   margin: 0;
   padding: 0;
   text-align: center; }
 
 .features__item {
-  border: 1px solid lightblue;
   display: inline-block;
   width: 300px;
-  vertical-align: middle;
+  vertical-align: top;
   margin: 0 20px; }
   .features__item-heading {
     display: block;
     font-family: 'Lifehack', sans-serif;
-    font-size: 22px;
+    font-size: 24px;
     margin: 15px 0; }
   .features__item-text {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #463030; }
+    color: #463030;
+    font-family: 'Ubuntu';
+    font-size: 16px;
+    font-weight: 300;
+    color: #2f3234; }
