--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,16 @@
     float: left; }
 
 .container {
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
-  position: relative; }
+  /* min-height: 650px; */ }
+
+.section {
+  min-height: 100vh; }
 
 .header__nav {
   float: right;
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', sans-serif;
   font-size: 13px;
   font-weight: 500;
   line-height: 30px;
@@ -67,8 +70,7 @@
       text-decoration: underline; }
 
 .main__burger {
-  width: 100%;
-  height: 100%; }
+  height: 650px; }
   .main__burger-pic {
     float: left; }
   .main__burger-inner__center {
@@ -118,8 +120,8 @@
     border: 1px solid #fff;
     border-radius: 50%; }
 
-.second-block {
-  min-height: 650px;
+.we_best__block {
+  height: 650px;
   background: url("../img/bg_white.png") center center no-repeat;
   background-size: cover;
   margin: 0 auto; }
@@ -134,7 +136,7 @@
   text-transform: uppercase;
   color: #333537; }
 
-.second-block__heading {
+.we_best__block__heading {
   margin: 0 auto;
   text-align: center; }
 
@@ -158,6 +160,83 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #463030;
     font-family: 'Ubuntu';
-    font-size: 16px;
+    font-size: 15px;
+    line-height: 26.2px;
     font-weight: 300;
     color: #2f3234; }
+
+.reviews {
+  height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .reviews__list {
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: 100%; }
+  .reviews__item {
+    position: relative;
+    list-style: none;
+    height: 50%;
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%; }
+    .reviews__item__inner {
+      width: 100%;
+      height: 100%; }
+      .reviews__item__inner-pic {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%); }
+
+.reviews__content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.603);
+  color: #fff;
+  opacity: 0;
+  padding: 1.2rem;
+  line-height: 27px;
+  font-size: 1rem;
+  -webkit-transition: .47s ease;
+  -o-transition: .47s ease;
+  transition: .47s ease; }
+  .reviews__content:hover {
+    opacity: 1; }
+  .reviews__content-name {
+    font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif; }
+  .reviews__content-text {
+    font-family: 'Ubuntu', sans-serif; }
+  .reviews__content-btn {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 0.967rem;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 10px;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #3a3939;
+    cursor: pointer;
+    font-weight: 500;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+    .reviews__content-btn:hover {
+      background-color: #1f1e1e; }
