--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,10 @@
+$dark: #2f3234;
+$yellow: #f8b43a;
 
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 .wrapper {
     width: 100%;
     height: 100%;
@@ -50,10 +56,10 @@
         display: inline-block;
         margin-left: 15px;
         &:last-child {
-            background-color: red;
+            background-color:#e45028;
             border-radius: 6px;
             &:hover {
-                background-color: darken(red, 7%);
+                background-color: darken(#e45028, 7%);
                 cursor: pointer;
                 transition: .2s ease;
             }
@@ -70,7 +76,7 @@
             display: none;
         }
         &:last-child {
-            padding: 5px 15px;
+            padding: 3px 15px;
         }
     }
     &-item-link {
@@ -96,13 +102,12 @@
     }
 }
 
-$main-green: #f6b43b;
 .main__burger-text {
     color: #fff;
     float: right;
     margin-top: 128px;
     &-1st {
-        color: $main-green;
+        color: $yellow;
         font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
         font-size: 63px;
         font-weight: 400;
@@ -124,7 +129,7 @@ $main-green: #f6b43b;
 .arrow__down {
     margin-bottom: -127px;
     margin-left: -20px;
-}
+} 
 
 .nav {
     &__list {
@@ -163,7 +168,7 @@ $main-green: #f6b43b;
     line-height: 85px;  
     font-weight: 500;
     text-transform: uppercase; 
-    color: #333537;
+    color: $dark;
 }
 
 .we_best__block__heading {
@@ -196,9 +201,9 @@ $main-green: #f6b43b;
         font-size: 15px;
         line-height: 26.2px;
         font-weight: 300;
-        color: #2f3234;
+        color: $dark;
     }
-}
+} 
 
 .reviews {
     height: 650px;
@@ -269,5 +274,6 @@ $main-green: #f6b43b;
         }
     }
 }
+
 
 
