--- a/css/styles.css
+++ b/css/styles.css
@@ -74,17 +74,35 @@ body {
       text-decoration: underline; }
 
 .main__burger {
-  height: 650px; }
+  height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
   .main__burger-pic {
-    float: left; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
   .main__burger-inner__center {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin: 0 auto;
     width: 875px;
     height: 369px; }
 
 .main__burger-text {
   color: #fff;
-  float: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   margin-top: 128px; }
   .main__burger-text-1st {
     color: #f8b43a;
@@ -100,7 +118,9 @@ body {
     font-size: 60px;
     font-weight: 700;
     text-transform: lowercase;
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-top: 25px; }
 
 .arrow__down {
@@ -148,10 +168,24 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center; }
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .features__item {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-preferred-size: 28%;
+  flex-basis: 28%;
   width: 300px;
   vertical-align: top;
   margin: 0 20px; }
