--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,8 @@ body {
   .header__main {
     min-height: 92px; }
   .header__main-inner {
-    width: 946px;
-    height: 71px;
+    max-width: 946px;
+    max-height: 71px;
     margin: 0 auto; }
   .header__logo {
     float: left; }
@@ -105,6 +105,7 @@ body {
   flex-direction: column;
   margin-top: 128px; }
   .main__burger-text-1st {
+    margin: 0;
     color: #f8b43a;
     font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
     font-size: 63px;
@@ -121,7 +122,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 25px; }
+    margin-top: 15px; }
 
 .arrow__down {
   margin-bottom: -127px;
@@ -202,6 +203,14 @@ body {
     line-height: 26.2px;
     font-weight: 300;
     color: #2f3234; }
+  .features__item-pic {
+    min-height: 130px; }
+    .features__item-pic_meat {
+      background: url("../img/icons/best/best_meat.svg") center center no-repeat; }
+    .features__item-pic_hand {
+      background: url("../img/icons/best/best_hand.svg") center center no-repeat; }
+    .features__item-pic_natural {
+      background: url("../img/icons/best/best_natural.svg") center center no-repeat; }
 
 .reviews {
   height: 650px;
