--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ body {
     display: -ms-flexbox;
     display: flex;
     margin: 0 auto;
-    width: 875px;
+    max-width: 875px;
     height: 369px; }
 
 .main__burger-text {
@@ -187,7 +187,7 @@ body {
   flex-direction: column;
   -ms-flex-preferred-size: 28%;
   flex-basis: 28%;
-  width: 300px;
+  max-width: 300px;
   vertical-align: top;
   margin: 0 20px; }
   .features__item-heading {
