--- a/css/styles.scss
+++ b/css/styles.scss
@@ -100,7 +100,7 @@ body {
     &-inner__center {
         display: flex;
         margin: 0 auto;
-        width: 875px;
+        max-width: 875px;
         height: 369px;    
     }
 }
@@ -194,7 +194,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-basis: 28%;
-    width: 300px;
+    max-width: 300px;
     vertical-align: top;
     margin: 0 20px;
     &-heading {
