--- a/css/styles.css
+++ b/css/styles.css
@@ -13,27 +13,34 @@ body {
   background-size: cover;
   margin: 0 auto; }
 
+.container {
+  max-width: 1100px;
+  margin: 0 auto; }
+
 .header {
   padding-top: 12px; }
   .header__main {
     min-height: 92px; }
   .header__main-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     max-width: 946px;
     max-height: 71px;
     margin: 0 auto; }
-  .header__logo {
-    float: left; }
-
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  /* min-height: 650px; */ }
 
 .section {
-  min-height: 100vh; }
+  min-height: 100vh;
+  width: 100%; }
 
 .header__nav {
-  float: right;
   font-family: 'Ubuntu', sans-serif;
   font-size: 13px;
   font-weight: 500;
@@ -287,3 +294,88 @@ body {
     transition: .3s; }
     .reviews__content-btn:hover {
       background-color: #1f1e1e; }
+
+.team-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  width: 50%; }
+
+.team {
+  background: url("../img/bg__team.jpg") center center no-repeat;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end; }
+  .team__block {
+    height: 100vh;
+    background-color: #2e2c2c;
+    opacity: 0.9;
+    width: 100%; }
+    .team__block-heading {
+      color: #f8b43a;
+      text-transform: uppercase;
+      font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+      font-size: 4.4rem;
+      font-weight: 300;
+      padding-left: 6rem; }
+    .team__block__list {
+      list-style: none;
+      margin-left: 4rem;
+      color: #fff; }
+    .team__block__item {
+      text-transform: uppercase;
+      font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+      font-size: 1rem;
+      font-weight: 300;
+      margin-bottom: 1rem; }
+
+.block__item-btn {
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+  .block__item-btn:hover {
+    color: #f8b43a; }
+  .block__item-btn::before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 7px solid #f8b43a;
+    margin-right: 0.8rem; }
+
+.menu {
+  background: url("../img/bg__menu.jpg") center center no-repeat;
+  background-size: cover; }
+
+.menu__block-heading {
+  color: #fff;
+  font-size: 4.4rem;
+  text-transform: uppercase;
+  font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 300;
+  margin: 0;
+  padding-top: 4rem; }
+
+.container-menu {
+  width: 100%; }
+
+.burgers-info {
+  background-color: #f9b43b; }
