--- a/css/styles.scss
+++ b/css/styles.scss
@@ -493,3 +493,8 @@ body {
 .order__right-item {
     margin-bottom: 1rem;
 }
+
+.map {
+    background: url('../img/bg__map.png') no-repeat;
+    background-size: cover;
+}
