--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale; }
 
 .wrapper {
+  position: relative;
   width: 100%;
   height: 100%; }
 
@@ -308,7 +309,7 @@ body {
   width: 50%; }
 
 .team {
-  background: url("../img/bg__team.jpg") center center no-repeat;
+  background: url("../img/bg__team.jpg") no-repeat;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -535,8 +536,36 @@ body {
   background-size: cover; }
 
 .footer {
-  position: absolute;
-  height: 100%;
+  height: 60px;
   width: 100%;
   background: url("../img/bg__footer.png") center center no-repeat;
-  background-size: contain; }
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  color: #fff; }
+
+.footer__left {
+  width: 50%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  .footer__left-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .footer__left-img {
+    background: url("../img/icons/phone.svg") center center no-repeat;
+    width: 16px;
+    height: 16px; }
+  .footer__left-number {
+    color: red; }
+
+.footer__right {
+  width: 50%; }
