--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,6 +10,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 .wrapper {
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -307,7 +308,7 @@ body {
 }
 
 .team {
-    background: url('../img/bg__team.jpg') center center no-repeat;
+    background: url('../img/bg__team.jpg') no-repeat;
     background-size: cover;
     display: flex;
     justify-content: flex-end;
@@ -529,9 +530,35 @@ body {
 }
 
 .footer {
-    position: absolute;
-    height: 100%;
+    height: 60px;
     width: 100%;
     background: url('../img/bg__footer.png') center center no-repeat;
-    background-size: contain;
+    background-size: cover;
+    position: absolute;
+    bottom: 0;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
+    color: #fff;
+}
+
+.footer__left {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    &-bottom {
+        display: flex;
+    }
+    &-img {
+        background: url('../img/icons/phone.svg') center center no-repeat;
+        width: 16px;
+        height: 16px;
+    }
+    &-number {
+        color: red;
+    }
+}
+
+.footer__right  {
+    width: 50%;
 }
