--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,11 @@ h4 {
     margin: 0;
 }
 
+@function rem($px) {
+    @return $px / 16px+0rem;
+}
+
+
 $dark: #2f3234;
 $yellow: #f8b43a;
 $orange: #f9b43b;
@@ -170,53 +175,82 @@ body {
     }
 }
 
-/* .menu__block-side {
+.section-title__menu {
     position: absolute;
-} */
-.menu__head {
-    width: 200px;
-}
-
-.container-menu {
-    position: relative;
+    top: 5%;
+    left: 5%;
 }
 
 .acco__list {
-    list-style: none;
-    display: flex;
-    min-height: 650px;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
-    margin-left: auto;
-    margin-top: 0;
+    margin: 0;
+    
 }
 
+.acco__item--active {
+        .acco__item__content {
+            width: rem(500px);
+        }
+        .acco__item__block-txt {
+            color: $yellow;
+        }
+}
 
 .acco__item {
-    display: flex;
-    width: 5rem;
+    list-style: none;
+    float: left;
     height: 100%;
-    background-position: center center;
-    background-size: cover;
+    
     &__block {
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: rem(70px);
+        height: 100%;
+        position: relative;
         display: flex;
-    }
-    &__block-txt {
-        font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 24px;
-        font-weight: 400;
-        text-transform: uppercase;
-        transform: rotate(270deg);
-        color: #fff;
-        position: absolute;
-        margin: 0;
-        padding: 0;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        float: left;
+        
+        &:hover {
+            .acco__item__block-txt {
+                color: $yellow;
+            }
+        }
+        &-txt {
+            font-size: 2.5rem;
+            font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: 400;
+            text-transform: uppercase;
+            text-align: center;
+            white-space: nowrap;
+            transform: rotate(-90deg);
+            color: #fff;
+            transition: .3s;
+        }
     }
 }
 
 
+
+.acco__item__content {
+    width: 0;
+    height: 100%;
+    color: #fff;
+    background: rgba(47,50,52,.93);
+    overflow: hidden;
+    float: left;
+    font-family: 'Ubuntu', sans-serif;
+    line-height: 1.8;
+    &-text {
+        padding: 25px 25px;
+    }
+}
 
 .we_best__block {
     height: 650px;
@@ -470,6 +504,7 @@ body {
 .menu {
     background: url('../img/bg__menu.jpg') center center no-repeat;
     background-size: cover;
+    position: relative;
 }
 
 .menu__block-heading {
