--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,6 +13,8 @@ $orange: #f9b43b;
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 300;
 }
 .wrapper {
     position: relative;
@@ -225,7 +227,7 @@ body {
         &-txt {
             font-size: 2.5rem;
             font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
-            font-weight: 400;
+            font-weight: 300;
             text-transform: uppercase;
             text-align: center;
             white-space: nowrap;
@@ -249,6 +251,7 @@ body {
     line-height: 1.8;
     &-text {
         padding: 25px 25px;
+        font-size: 0.9rem;
     }
 }
 
@@ -526,85 +529,6 @@ body {
     
 }
 
-.order {
-    background: url('../img/bg__order.png') center center no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-}
-.order__heading__block {
-    text-align: center;
-}
-.order__heading {
-    margin: 0;
-    color: $yellow;
-    text-transform: uppercase;
-    font-family: 'Gagalin', Verdana, GenevaTahoma, sans-serif;
-    font-size: 4.4rem;
-    font-weight: 300;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 3rem;
-}
-
-.order__form {
-    color: #fff;
-    font-family: "Ubuntu", sans-serif;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: baseline;
-    font-size: 0.9rem;
-    &-input {
-        border-radius: 5px;
-        width: 10rem;
-        margin-bottom: 0.8rem;
-    }
-
-}
-
-.order__form-input__street {
-    width: 22rem;
-    border-radius: 5px;
-    margin-bottom: 0.8rem;
-}
-.order__form-input__small {
-    border-radius: 5px;
-    width: 4rem;
-}
-
-.order__form-left {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 24rem;
-    &__name {
-        flex-grow: 1;
-    }
-    &__phone {
-        flex-grow: 1;
-    }
-    &__street {
-        flex-grow: 2;
-    }
-    &__adress {
-        display: flex;
-    }
-}
-
-.order__form-textarea {
-    border-radius: 5px;
-}
-
-.adress__item {
-    margin-right: 1.6rem;
-}
-
-.order__form-text2 {
-    padding-left: 5px;
-    padding-right: 8px;
-}
-
 .order__btn {
     border-radius: 6px;
     background-color: #e45028;
@@ -633,6 +557,114 @@ body {
 
 .order__right-item {
     margin-bottom: 1rem;
+}
+
+.order {
+    background: url('../img/bg__order.png') center center / cover no-repeat;
+    color: #fff;
+}
+
+.order__head {
+    display: flex;
+    justify-content: center;
+}
+
+.form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form__row {
+    display: flex;
+}
+
+.form__block {
+    flex: 1;
+    margin-right: 55px;
+    &:last-child {
+        margin-right: 0;
+    }
+}
+
+.form__input {
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 20px;
+    margin-bottom: rem(15px);
+    margin-top: rem(5px);
+}
+
+.form__textarea {
+    @extend .form__input;
+    resize: none;
+    height: 90px;
+}
+
+.left-form {
+    max-width: rem(500px);
+    width: 50%;
+    margin-right: rem(55px);
+}
+.right-form {
+    max-width: rem(500px);
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.radio__buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: rem(15px);
+    &-input {
+        margin-right: rem(10px);
+    }
+}
+
+.form__checkbox {
+    display: flex;
+    align-items: center;
+    margin-bottom: rem(15px);
+}
+
+.checked__title {
+    margin-left: rem(10px);
+}
+
+.form__buttons {
+    display: flex;
+    
+}
+
+.form__button-order {
+    color: #fff;
+    text-decoration: unset;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    padding: rem(8px) rem(15px);
+    background-color: #e45028;
+    max-width: rem(120px);
+    border-radius: 5px;
+    transition: .3s;
+    cursor: pointer;
+    &:hover {
+        background-color: darken(#e45028, 20%);
+    }
+}
+
+.form__button-reset {
+    color: #fff;
+    text-decoration: unset;
+    border: none;
+    background-color: transparent;
+    padding: rem(8px) rem(15px);
+    max-width: rem(120px);
+    cursor: pointer;
+    &:hover {
+        color: darken(#fff, 30%);
+    }
 }
 
 .map {
