--- a/css/styles.scss
+++ b/css/styles.scss
@@ -114,10 +114,10 @@ body {
         justify-content: center;
     }
     &-block {
-        max-height: rem(200px);
+        /* max-height: rem(200px); */
     }
     &-block-pic {
-        max-width: rem(500px);
+       /*  max-width: rem(500px); */
     }
 }
 
