--- a/css/styles.scss
+++ b/css/styles.scss
@@ -110,6 +110,7 @@ body {
 
 .main__burger {
     display: flex;
+    justify-content: center;
     &-inner {
         display: flex;
         justify-content: center;
