--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,7 +7,6 @@ h4 {
 }
 
 * {
-    border: 1px solid red;
     box-sizing: border-box;
 }
 
@@ -31,6 +30,9 @@ body {
     background: url('../img/leaves_bg.jpg') center center no-repeat;
     background-size: cover;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -42,7 +44,6 @@ body {
 
 
 .header {
-    padding-top: 12px;
     &__main {
     min-height: 92px;    
     }
