--- a/css/styles.scss
+++ b/css/styles.scss
@@ -60,6 +60,8 @@ body {
 .section {
     height: 100vh;
     min-height: 650px;
+    display: flex;
+    justify-content: center;
 }
 
 .header__nav {
@@ -115,6 +117,7 @@ body {
     &-inner {
         display: flex;
         justify-content: center;
+        padding-bottom: rem(36px);
     }
     &-block {
         /* max-height: rem(200px); */
@@ -149,6 +152,7 @@ body {
     color: #fff;
     display: flex;
     flex-direction: column;
+    padding-top: rem(144px);
     &-2nd {
         color: #ffffff;
         font-family: 'Lifehack', sans-serif;
@@ -164,6 +168,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: rem(50px);
 }
 
 .arrow__down {
