--- a/css/styles.scss
+++ b/css/styles.scss
@@ -594,6 +594,8 @@ body {
 
 .form {
     display: flex;
+    flex-wrap: wrap;
+    margin: 0 rem(10px);
 }
 
 .form__row {
@@ -623,10 +625,15 @@ body {
     height: 90px;
 }
 
+.form__title {
+    margin-right: rem(8px);
+}
+
 .left-form {
     max-width: rem(500px);
     width: 50%;
     margin-right: rem(20px);
+    flex: 1;
 }
 
 .right-form {
@@ -634,6 +641,11 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
+    flex: 1;
+    &__radio {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 .radio__buttons {
@@ -642,18 +654,81 @@ body {
     align-items: center;
     margin-bottom: rem(15px);
     &-input {
-        margin-right: rem(10px);
+        display: none;
     }
+}
+
+.radio__buttons--style {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #fff;
+    background-color: #fff;
+    border-radius: 50%;
+    margin: 0;
+    float: left;
+    margin-right: 5px;
+    margin-top: -2px;
+    vertical-align: middle;
+    &::before {
+        content: "";
+        position: absolute;
+        top: 4px;
+        left: 4px;
+        right: 6px;
+        bottom: 6px;
+        background: #ec1e79;
+        border-radius: 50%;
+        width: 8px;
+        height: 8px;
+        transform: scale(0);
+        transition: .4s;
+    }
+}
+
+.radio__buttons-input:checked + .radio__buttons--style::before {
+    transform: scale(1);
 }
 
 .form__checkbox {
     display: flex;
     align-items: center;
     margin-bottom: rem(15px);
+    &-basic {
+        display: none;
+    }
+    &--style {
+        position: relative;
+        width: 18px;
+        height: 18px;
+        border: 1px solid #fff;
+        background-color: #fff;
+        border-radius: 2px;
+        margin: 0;
+        float: left;
+        margin-right: 5px;
+        margin-top: -2px;
+        vertical-align: middle;
+        &::before {
+            content: "";
+            position: absolute;
+            background: url('../img/icons/checkmark.png') center center no-repeat;
+            top: 0;
+            left: 0;
+            width: 16px;
+            height: 16px;
+            transform: scale(0);
+            transition: .4s;
+        }
+    }
 }
 
+.form__checkbox-basic:checked + .form__checkbox--style::before {
+    transform: scale(1);
+}
+
+
 .checked__title {
-    margin-left: rem(10px);
 }
 
 .form__buttons {
