--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,5 @@
+@import url("adaptive/media.css");
+
 h4 {
     margin: 0;
 }
@@ -379,9 +381,10 @@ body {
     color: #fff;
     opacity: 0;
     padding: 1.2rem;
-    line-height: 27px;
+    line-height: rem(27px);
     font-size: 1rem;
     transition: .47s ease;
+    overflow: hidden;
     &:hover {
         opacity: 1;
     }
@@ -590,6 +593,7 @@ body {
 .order__head {
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 .form {
@@ -784,7 +788,7 @@ body {
 
 .footer__left {
     width: 50%;
-    height: 100%;
+    height: 56px;
     display: flex;
     flex-direction: column;
     &-top {
@@ -807,4 +811,34 @@ body {
 
 .footer__right  {
     width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
 }
+
+.footer__container {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.icon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 17px;
+  fill: #595959;
+  width: 25px;
+  height: 25px;
+  transition: .4s;
+}
+.icon:hover {
+    fill: #fff; 
+}
+
+.icon:first-child {
+    margin-left: 0; 
+}
+
+
