--- a/css/adaptive/media.scss
+++ b/css/adaptive/media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1200px) { //desctop
+/* @media (max-width: 1200px) { //desctop
     .container {
         width: 970px;
     }
@@ -20,6 +20,6 @@
     .container {
         width: 95%;
     }
-}
+} */
 
 
